--- a/project.json
+++ b/project.json
@@ -5,6 +5,6 @@
 	"preview" : "preview.jpg",
 	"tags" : [ "Abstract" ],
 	"title" : "Triangler",
-	"type" : "web",
+	"type" : "Web",
 	"version" : 1
 }
